--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -26,7 +26,7 @@ main:
 
     
   - title: "CV"
-    url: /files/dvsj-cv.pdf
+    url: /files/dvsjj-cv.pdf
     
   # - title: "CV"
   #   url: /cv-json/
